<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aty2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_drink"
            android:textSize="22sp"
            android:textColor="@android:color/background_dark"/>

        <EditText
            android:id="@+id/ed_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/tv_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sugar"
            android:textSize="22sp"
            android:textColor="@android:color/background_dark"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_sugar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/radio_sugar1" />

            <RadioButton
                android:id="@+id/radio_sugar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/radio_sugar2" />

            <RadioButton
                android:id="@+id/radio_sugar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/radio_sugar3" />

            <RadioButton
                android:id="@+id/radio_sugar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/radio_sugar4" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_ice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ice"
            android:textSize="22sp"
            android:textColor="@android:color/background_dark"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_ice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/radio_ice1" />

            <RadioButton
                android:id="@+id/radio_ice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/radio_ice2" />

            <RadioButton
                android:id="@+id/radio_ice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/radio_ice3" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:text="@string/btn_send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>